# stmepic_base

./: CMakeLists.txt
src/Algorithm/: CMakeLists.txt  random_number_generator.cpp  random_number_generator.hpp  sha256.cpp  sha256.hpp  vectors3d.hpp
src/Controllers/: CMakeLists.txt  pid.cpp  pid.hpp
src/Device/: CMakeLists.txt  device.cpp  device.hpp  simple_task.cpp  simple_task.hpp
src/Hardware/: CMakeLists.txt  can.hpp  gpio.hpp  hardware.hpp  i2c.cpp  i2c.hpp  multiplexer.hpp  uart.hpp
src/Inc/: CMakeLists.txt  status.hpp  stmepic.hpp
src/Memory/: CMakeLists.txt  fram_i2c.cpp  fram_i2c.hpp  memory_fram.cpp  memory_fram.hpp
src/Sensors/: CMakeLists.txt  imu.hpp  ntc_termistor.cpp  ntc_termistor.hpp
src/Timing/: CMakeLists.txt  Timing.cpp  Timing.hpp
